--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -9,3 +9,42 @@
         font-weight: 700;
     }
 }
+
+.wrapper {
+    width: 100%;
+    z-index: 1000;
+    position: relative;
+    
+    .menu__nav {
+        max-width: 800px;
+        position: relative;
+        left: 550px;
+        bottom: 40px;
+    }
+     
+    .menu__ul {
+        display: flex;
+        justify-content: space-between;  
+    }
+    
+    .folder__collection {
+        list-style-type: none;
+    }
+    
+    .page__collection{
+        list-style-type: none;
+    }
+
+    .external__link{
+        list-style-type: none;
+    }
+
+    .menu__a{
+        color: $black;
+        text-decoration: none;
+        cursor: pointer;
+        text-transform: uppercase;
+    }
+
+   
+}
