--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,13 +4,14 @@
 
 body {
     background-color: $background;
+    font-family: 'Roboto', sans-serif;
 }
 
-.canvas {
+.wrapper {
     width: calc(100vw - 100px);
     height: 100%;
     background-color: #fff;
     margin: 10px auto;
     border-radius: 10px;
-    max-width: 1400px;
+    max-width: 900px;
   }
