--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -3,8 +3,10 @@
 .menu {
 
     a {
+       display: block;
        text-decoration: none;
        color: $hover;
+       
  
        &:hover {
          color: $black;
