--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -9,22 +9,37 @@
 .window {
     height: 100%;
     width: 100%;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .sliderBlock {
-    display: flex;
+    border-radius: 1rem;
     height: 500px;
     background-color: rgba(175,175,175,.1);
 }
 
 
+.carousel {
+    cursor: grab;
+    overflow: hidden;
+}
+
+.inner-carousel {
+    display: flex;
+}
+
 .personalSlider {
-    border-radius: 10px;
-    margin-left: 200px;
 
     img {
-        width:  400px;
-        height: 100%;
+        pointer-events: none;
+        margin-left: 200px;
+        height: 500px;
+        width: 400px;
+        border-radius: 1rem;
     }
 }
+
+
+
+
+
