--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -37,7 +37,7 @@
      background-color: $background;
  
      li {
-     padding: 10px 0px 0px 0px;
+        padding: 10px 0px 0px 0px;
     
  
  
@@ -51,5 +51,11 @@
          }
      }
      }
+ }
+
+
+ .footer {
+    margin-top: 50px;
+    margin-left: 800px;
  }
  
