--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -50,7 +50,9 @@
   }
 
   p {
-    font-size: 15px;
+    height: 30;
+    color: rgb(151, 13, 13);
+    padding-left: 100px;
   }
 }
 
@@ -77,6 +79,12 @@
     padding: 5px;
     padding-left: 10px;
   }
+
+  p {
+    height: 30;
+    color: rgb(151, 13, 13);
+    padding-left: 100px;
+  }
 }
 
 .message__block {
@@ -101,6 +109,12 @@
     font-size: 14px;
     resize: vertical;
     padding: 10px;
+  }
+
+  p {
+    height: 30;
+    color: rgb(151, 13, 13);
+    padding-left: 100px;
   }
 }
 
