--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -135,4 +135,9 @@
     background-color: rgb(0, 0, 0);
     color: #fff;
   }
+
+  &:disabled {
+    background-color: rgb(170, 162, 162);
+    color: #fff;
+  }
 }
