--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,45 +1,37 @@
 @import '../variables';
 
-
 .main-container {
-    height: 500px;
-    width: 800px;
+  height: 500px;
+  width: 800px;
 }
 
 .window {
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
 .sliderBlock {
-    border-radius: 1rem;
-    height: 500px;
-    background-color: rgba(175,175,175,.1);
+  border-radius: 1rem;
+  height: 500px;
+  background-color: rgba(175, 175, 175, 0.1);
 }
 
-
 .carousel {
-    cursor: grab;
-    overflow: hidden;
+  cursor: grab;
+  overflow: hidden;
 }
 
 .inner-carousel {
-    display: flex;
+  display: flex;
 }
 
 .personalSlider {
-
-    img {
-        pointer-events: none;
-        margin-left: 170px;
-        height: 500px;
-        width: 400px;
-        border-radius: 1rem;
-    }
+  img {
+    pointer-events: none;
+    margin-left: 170px;
+    height: 500px;
+    width: 400px;
+    border-radius: 1rem;
+  }
 }
-
-
-
-
-
