--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,37 +1,62 @@
 @import '../variables';
 
-.main-container {
-  height: 500px;
-  width: 800px;
-}
-
-.window {
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-
-.sliderBlock {
+.container-slide {
+  max-width: 800px;
   border-radius: 1rem;
   height: 500px;
+  margin: 10px auto 0;
   background-color: rgba(175, 175, 175, 0.1);
+  position: relative;
+  overflow: 1;
 }
 
-.carousel {
-  cursor: grab;
-  overflow: hidden;
-}
+.slide {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+  transition: opacity ease-in-out 0.4s;
 
-.inner-carousel {
-  display: flex;
-}
-
-.personalSlider {
   img {
     pointer-events: none;
-    margin-left: 170px;
-    height: 500px;
+    margin-left: 200px;
+    height: 100%;
     width: 400px;
     border-radius: 1rem;
+    object-fit: cover;
   }
+}
+
+.active-anim {
+  opacity: 1;
+}
+
+.btn-slide {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #f1f1f1;
+  border: 1px solid rgba(34, 34, 34, 0.287);
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  img {
+    width: 30px;
+    height: 30px;
+    pointer-events: none;
+  }
+}
+
+.prev {
+  top: 50%;
+  left: 20px;
+  transform: translateY(-60%);
+}
+.next {
+  top: 50%;
+  right: 20px;
+  transform: translateY(-60%);
 }
