--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -1,7 +1,11 @@
 .imperfectionPost {
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .lifePost {
-  margin-top: 30px;
+  margin-top: 50px;
+}
+
+.amenPost {
+  margin-top: 50px;
 }
