--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -15,7 +15,7 @@
   height: 100%;
   position: absolute;
   opacity: 0;
-  transition: opacity ease-in-out 0.4s;
+  transition: opacity ease-in-out 0.8s;
 
   img {
     pointer-events: none;
@@ -34,9 +34,9 @@
 .btn-slide {
   width: 50px;
   height: 50px;
-  border-radius: 50%;
-  background: #f1f1f1;
-  border: 1px solid rgba(34, 34, 34, 0.287);
+  // border-radius: 50%;
+  // background: #f1f1f1;
+  // border: 1px solid rgba(34, 34, 34, 0.287);
   position: absolute;
   display: flex;
   justify-content: center;
@@ -44,19 +44,19 @@
   cursor: pointer;
 
   img {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     pointer-events: none;
   }
 }
 
 .prev {
   top: 50%;
-  left: 20px;
+  left: 10px;
   transform: translateY(-60%);
 }
 .next {
   top: 50%;
-  right: 20px;
+  right: 10px;
   transform: translateY(-60%);
 }
