--- a/src/scss/components/_dots.scss
+++ b/src/scss/components/_dots.scss
@@ -13,8 +13,8 @@
   border-radius: 50%;
   border: 3px solid #f1f1f1;
   margin: 0 5px;
-  background: #f1f1f1;
+  background: #9c9b9b;
 }
 .dot.active {
-  background: rgb(102, 100, 100);
+  background: rgb(46, 45, 45);
 }
