--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -5,7 +5,7 @@
   border-radius: 1rem;
   height: 500px;
   margin: 10px auto 0;
-  background-color: rgba(175, 175, 175, 0.1);
+  background-color: rgba(151, 150, 150, 0.1);
   position: relative;
   overflow: 1;
 }
@@ -21,7 +21,7 @@
     pointer-events: none;
     margin-left: 200px;
     height: 100%;
-    width: 400px;
+    max-width: 400px;
     border-radius: 1rem;
     object-fit: cover;
   }
