--- a/src/scss/components/_improvisation.scss
+++ b/src/scss/components/_improvisation.scss
@@ -4,3 +4,25 @@
   margin: 10px auto 0;
   background-color: rgba(151, 150, 150, 0.1);
 }
+
+.content__pro {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 590px;
+  grid-column-gap: 1%;
+}
+
+.content__pro-item {
+  text-align: center;
+  padding-top: 10px;
+
+  img {
+    width: 100%;
+    height: 100%;
+    transition: all 1s ease;
+
+    &:hover {
+      transform: scale(1.3);
+    }
+  }
+}
