--- a/src/scss/components/_hobby.scss
+++ b/src/scss/components/_hobby.scss
@@ -1,23 +1,6 @@
-.content__hobby {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 200px 200px 190px;
-  grid-column-gap: 1%;
-  grid-row-gap: 1%;
-}
-
-.content__item {
-  text-align: center;
-  padding: 10px;
-  border: 1px solid rgb(167, 162, 162);
-
-  img {
-    width: 100%;
-    height: 100%;
-    transition: all 1s ease;
-
-    &:hover {
-      transform: scale(1.3);
-    }
-  }
+.container__hobby {
+  max-width: 800px;
+  height: 900px;
+  margin: 10px auto 0;
+  background-color: rgba(151, 150, 150, 0.1);
 }
