--- a/src/scss/components/_improvisation.scss
+++ b/src/scss/components/_improvisation.scss
@@ -1,28 +1,202 @@
-.container {
-  max-width: 800px;
-  height: 600px;
-  margin: 10px auto 0;
-  background-color: rgba(151, 150, 150, 0.1);
+$Raleway: 'Raleway', sans-serif;
+
+.container__improvisation {
+  width: 800px;
+  height: 510px;
+  overflow: hidden;
+  font-family: $Raleway;
+  position: relative;
+  background: rgba(20, 11, 11, 0.21);
 }
 
-.content__pro {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 590px;
-  grid-column-gap: 1%;
-}
+.card-wrapper {
+  position: relative;
+  width: 100%;
+  padding: 0 10px;
+  box-sizing: border-box;
+  &:active,
+  &:hover,
+  &:focus {
+    outline: none;
+    border: none;
+  }
+} //card-wrapper
 
-.content__pro-item {
-  text-align: center;
-  padding-top: 10px;
-
-  img {
+.card {
+  width: 100%;
+  height: 450px;
+  border-radius: 16px;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+  margin-top: 10px;
+  .card-image {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    transition: all 1s ease;
-
-    &:hover {
-      transform: scale(1.3);
+    z-index: 2;
+    background-color: #000;
+    transition: 0.5s;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  } //card-image
+  &:hover {
+    img {
+      opacity: 0.4;
+      transition: 0.5s;
+    }
+    .card-image {
+      transform: translateY(-100px);
+      transition: all 0.9s;
     }
   }
+} //card
+
+.social-icons {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+  display: flex;
+  li {
+    margin-right: 25px;
+    list-style: none;
+    a {
+      position: relative;
+      display: block;
+      width: 48px;
+      height: 48px;
+      line-height: 50px;
+      text-align: center;
+      background: #fff;
+      font-size: 23px;
+      color: #333;
+      font-weight: bold;
+      margin: 0 6px;
+      transition: 0.4s;
+      transform: translateY(200px);
+      opacity: 0;
+    }
+  }
+} //social-icons
+
+// .card:hover {
+//   .social-icons li a {
+//     transform: translateY(0px);
+//     opacity: 1;
+//   }
+// }
+// .social-icons li a:hover {
+//   background: rgb(216, 214, 214);
+//   transition: 0.2s;
+// }
+
+// .card:hover li:nth-child(1) a {
+//   transition-delay: 0.1s;
+// }
+// .card:hover li:nth-child(2) a {
+//   transition-delay: 0.2s;
+// }
+
+.details {
+  position: absolute;
+  bottom: 400px;
+  left: 0;
+  background: #fff;
+  width: 100%;
+  height: 120px;
+  z-index: 1;
+  padding: 10px;
+  transition: 0.6s;
+  h2 {
+    margin: 50px 0px;
+    padding: 0;
+    text-align: center;
+    .job-title {
+      font-size: 16px;
+      line-height: 2;
+      color: #333;
+      font-weight: 300;
+      display: block;
+    }
+  }
+}
+
+.card:hover {
+  .details {
+    bottom: 0;
+  }
+}
+
+.carousel {
+  .slick-dots {
+    bottom: -3vw;
+    li {
+      width: 30px;
+      button {
+        font-size: 16px;
+        width: 20px;
+        height: 20px;
+        border: 1px solid #fff;
+        border-radius: 20px;
+        &:before {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          width: 10px;
+          height: 10px;
+          border-radius: 10px;
+          content: '';
+          text-align: center;
+          opacity: 0.5;
+          color: #000;
+          background-color: #fff;
+          transform: translate(-50%, -50%);
+          transition: all 0.3s ease-in-out;
+        }
+      }
+      &.slick-active,
+      &:hover {
+        button {
+          border-color: tomato;
+          &:before {
+            background-color: tomato;
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+
+  // .slick-prev,
+  // .slick-next {
+  //   width: 50px;
+  //   height: 50px;
+  //   background-color: #fff;
+  // }
+  // .slick-prev:hover,
+  // .slick-prev:focus,
+  // .slick-next:hover,
+  // .slick-next:focus {
+  //   color: #fff;
+  //   outline: none;
+  //   background: #fff;
+  // }
+  // .slick-prev:before,
+  // .slick-next:before {
+  //   color: #000;
+  //   font-family: $Raleway;
+  // }
+  // .slick-next {
+  //   right: -55px;
+  // }
+  // .slick-prev {
+  //   left: -55px;
+  // }
 }
