--- a/src/scss/components/_improvisation.scss
+++ b/src/scss/components/_improvisation.scss
@@ -84,25 +84,7 @@ $Raleway: 'Raleway', sans-serif;
       opacity: 0;
     }
   }
-} //social-icons
-
-// .card:hover {
-//   .social-icons li a {
-//     transform: translateY(0px);
-//     opacity: 1;
-//   }
-// }
-// .social-icons li a:hover {
-//   background: rgb(216, 214, 214);
-//   transition: 0.2s;
-// }
-
-// .card:hover li:nth-child(1) a {
-//   transition-delay: 0.1s;
-// }
-// .card:hover li:nth-child(2) a {
-//   transition-delay: 0.2s;
-// }
+}
 
 .details {
   position: absolute;
@@ -116,6 +98,7 @@ $Raleway: 'Raleway', sans-serif;
   transition: 0.6s;
   h2 {
     margin: 50px 0px;
+    margin-right: 15px;
     padding: 0;
     text-align: center;
     .job-title {
@@ -134,69 +117,33 @@ $Raleway: 'Raleway', sans-serif;
   }
 }
 
-.carousel {
-  .slick-dots {
-    bottom: -3vw;
-    li {
-      width: 30px;
-      button {
-        font-size: 16px;
-        width: 20px;
-        height: 20px;
-        border: 1px solid #fff;
-        border-radius: 20px;
-        &:before {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          width: 10px;
-          height: 10px;
-          border-radius: 10px;
-          content: '';
-          text-align: center;
-          opacity: 0.5;
-          color: #000;
-          background-color: #fff;
-          transform: translate(-50%, -50%);
-          transition: all 0.3s ease-in-out;
-        }
-      }
-      &.slick-active,
-      &:hover {
-        button {
-          border-color: tomato;
-          &:before {
-            background-color: tomato;
-            opacity: 1;
-          }
-        }
-      }
-    }
-  }
-
-  // .slick-prev,
-  // .slick-next {
-  //   width: 50px;
-  //   height: 50px;
-  //   background-color: #fff;
-  // }
-  // .slick-prev:hover,
-  // .slick-prev:focus,
-  // .slick-next:hover,
-  // .slick-next:focus {
-  //   color: #fff;
-  //   outline: none;
-  //   background: #fff;
-  // }
-  // .slick-prev:before,
-  // .slick-next:before {
-  //   color: #000;
-  //   font-family: $Raleway;
-  // }
-  // .slick-next {
-  //   right: -55px;
-  // }
-  // .slick-prev {
-  //   left: -55px;
-  // }
-}
+// .carousel {
+//   .slick-dots {
+//     bottom: -3vw;
+//     li {
+//       width: 20px;
+//       button {
+//         font-size: 16px;
+//         width: 20px;
+//         height: 20px;
+//         border: 1px solid #fff;
+//         border-radius: 20px;
+//         &:before {
+//           position: absolute;
+//           top: 50%;
+//           left: 50%;
+//           width: 10px;
+//           height: 10px;
+//           border-radius: 10px;
+//           content: '';
+//           text-align: center;
+//           opacity: 0.5;
+//           color: #000;
+//           background-color: #fff;
+//           transform: translate(-50%, -50%);
+//           transition: all 0.3s ease-in-out;
+//         }
+//       }
+//     }
+//   }
+// }
