--- a/src/scss/components/_hobby.scss
+++ b/src/scss/components/_hobby.scss
@@ -1,6 +1,30 @@
 .container__hobby {
+  width: 100%;
   max-width: 800px;
-  height: 900px;
+  height: 510px;
   margin: 10px auto 0;
   background-color: rgba(151, 150, 150, 0.1);
+}
+
+.item {
+  min-height: 500px;
+  min-width: 300px;
+  padding: 10px;
+
+  img {
+    width: 100%;
+    height: 458px;
+    border-radius: 5px;
+    padding-left: 15px;
+    pointer-events: none;
+  }
+}
+
+.inner-carousel {
+  display: flex;
+}
+
+.carousel {
+  cursor: grab;
+  overflow: hidden;
 }
