--- a/src/scss/components/_improvisation.scss
+++ b/src/scss/components/_improvisation.scss
@@ -1,7 +1,8 @@
 $Raleway: 'Raleway', sans-serif;
 
 .container__improvisation {
-  width: 800px;
+  width: 100%;
+  max-width: 800px;
   height: 510px;
   overflow: hidden;
   font-family: $Raleway;
