--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -14,12 +14,19 @@
     font-size: 44px;
     font-weight: 700;
 
-    @media (max-width: 550px) {
+    @media (max-width: 750px) {
+      font-size: 37px;
+    }
+    @media (max-width: 700px) {
       font-size: 34px;
     }
 
+    @media (max-width: 600px) {
+      font-size: 30px;
+    }
+
     @media (max-width: 450px) {
-      font-size: 29px;
+      font-size: 27px;
     }
   }
 }
