--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -19,10 +19,6 @@
       display: block;
       z-index: 999;
     }
-
-    @media (max-width: 650px) {
-      display: none;
-    }
   }
 }
 
@@ -31,37 +27,22 @@
   justify-content: space-around;
 
   @media (max-width: 750px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    text-align: center;
+    margin-right: 15px;
+  }
+
+  @media (max-width: 560px) {
+    margin-right: 45px;
+    font-size: 16px;
+  }
+
+  @media (max-width: 481px) {
+    grid-template-columns: 1fr 1fr;
+    margin-right: 45px;
     font-size: 15px;
-  }
-}
-
-.menu__icon {
-  font-size: 24px;
-  display: none;
-  cursor: pointer;
-
-  @media (max-width: 650px) {
-    display: block;
-    margin-right: 190px;
-    font-size: 30px;
-  }
-
-  @media (max-width: 550px) {
-    display: block;
-    margin-right: 150px;
-    font-size: 27px;
-  }
-
-  @media (max-width: 450px) {
-    display: block;
-    margin-right: 120px;
-    font-size: 27px;
-  }
-
-  @media (max-width: 400px) {
-    display: block;
-    margin-right: 100px;
-    font-size: 27px;
   }
 }
 
@@ -89,4 +70,10 @@
 .footer {
   margin-top: 50px;
   margin-left: 800px;
+
+  a {
+    @media (max-width: 481px) {
+      padding-right: 45px;
+    }
+  }
 }
