--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -1,11 +1,59 @@
 .imperfectionPost {
   margin-top: 50px;
+
+  @media (max-width: 800px) {
+    font-size: 16px;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 14px;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 13px;
+  }
+
+  @media (max-width: 400px) {
+    font-size: 12px;
+  }
 }
 
 .lifePost {
   margin-top: 50px;
+
+  @media (max-width: 800px) {
+    font-size: 16px;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 14px;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 13px;
+  }
+
+  @media (max-width: 400px) {
+    font-size: 12px;
+  }
 }
 
 .amenPost {
   margin-top: 50px;
+
+  @media (max-width: 800px) {
+    font-size: 16px;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 14px;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 13px;
+  }
+
+  @media (max-width: 400px) {
+    font-size: 12px;
+  }
 }
