--- a/src/scss/components/_hobby.scss
+++ b/src/scss/components/_hobby.scss
@@ -7,14 +7,14 @@
 }
 
 .item {
-  min-height: 500px;
-  min-width: 300px;
+  min-height: 450px;
+  min-width: 280px;
   padding: 10px;
 
   img {
-    width: 100%;
-    height: 458px;
-    border-radius: 5px;
+    width: 250px;
+    height: 400px;
+    border-radius: 10px;
     padding-left: 15px;
     pointer-events: none;
   }
