--- a/src/scss/components/_improvisation.scss
+++ b/src/scss/components/_improvisation.scss
@@ -8,6 +8,14 @@ $Raleway: 'Raleway', sans-serif;
   font-family: $Raleway;
   position: relative;
   background: rgba(20, 11, 11, 0.21);
+
+  @media (max-width: 800px) {
+    height: 410px;
+  }
+
+  @media (max-width: 650px) {
+    height: 370px;
+  }
 }
 
 .card-wrapper {
@@ -31,6 +39,15 @@ $Raleway: 'Raleway', sans-serif;
   cursor: pointer;
   position: relative;
   margin-top: 10px;
+
+  @media (max-width: 800px) {
+    height: 350px;
+  }
+
+  @media (max-width: 650px) {
+    height: 300px;
+  }
+
   .card-image {
     position: absolute;
     top: 0;
@@ -40,6 +57,7 @@ $Raleway: 'Raleway', sans-serif;
     z-index: 2;
     background-color: #000;
     transition: 0.5s;
+
     img {
       width: 100%;
       height: 100%;
@@ -97,11 +115,16 @@ $Raleway: 'Raleway', sans-serif;
   z-index: 1;
   padding: 10px;
   transition: 0.6s;
+
   h2 {
     margin: 50px 0px;
     margin-right: 15px;
     padding: 0;
     text-align: center;
+
+    @media (max-width: 650px) {
+      font-size: 16px;
+    }
     .job-title {
       font-size: 16px;
       line-height: 2;
