--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -11,6 +11,10 @@
 .contact__block {
   display: flex;
   justify-content: space-between;
+
+  @media (max-width: 800px) {
+    flex-direction: column;
+  }
 }
 
 .content__block {
@@ -18,14 +22,105 @@
   font-size: 15px;
   padding-left: 10px;
 
+  @media (max-width: 800px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   h3 {
     font-size: 19px;
     font-weight: 600px;
+
+    @media (max-width: 480px) {
+      font-size: 18px;
+      padding-right: 65px;
+    }
+
+    @media (max-width: 440px) {
+      padding-right: 105px;
+    }
+
+    @media (max-width: 420px) {
+      padding-right: 135px;
+    }
+
+    @media (max-width: 400px) {
+      padding-right: 155px;
+    }
+
+    @media (max-width: 385px) {
+      padding-right: 175px;
+    }
+
+    @media (max-width: 375px) {
+      padding-right: 185px;
+    }
+
+    @media (max-width: 365px) {
+      padding-right: 195px;
+    }
   }
 
   p {
     width: 350px;
     padding-top: 10px;
+
+    @media (max-width: 800px) {
+      padding-top: 1px;
+    }
+
+    @media (max-width: 500px) {
+      width: 320px;
+    }
+
+    @media (max-width: 480px) {
+      width: 210px;
+      font-size: 14px;
+      padding-right: 20px;
+    }
+
+    @media (max-width: 440px) {
+      font-size: 13px;
+      padding-right: 60px;
+    }
+
+    @media (max-width: 420px) {
+      padding-right: 80px;
+    }
+
+    @media (max-width: 410px) {
+      min-width: 200px;
+      padding-right: 89px;
+    }
+
+    @media (max-width: 400px) {
+      padding-right: 100px;
+    }
+
+    @media (max-width: 420px) {
+      padding-right: 105px;
+    }
+
+    @media (max-width: 400px) {
+      padding-right: 115px;
+    }
+
+    @media (max-width: 390px) {
+      padding-right: 120px;
+    }
+
+    @media (max-width: 380px) {
+      padding-right: 125px;
+    }
+
+    @media (max-width: 370px) {
+      padding-right: 135px;
+    }
+
+    @media (max-width: 360px) {
+      padding-right: 145px;
+    }
   }
 }
 
@@ -37,10 +132,24 @@
   margin-top: 25px;
   width: 100%;
 
+  @media (max-width: 480px) {
+    display: flex;
+    flex-direction: column;
+  }
+
   label {
     display: block;
     margin: 0px 0px 10px 0px;
     font-size: 16px;
+
+    @media (max-width: 500px) {
+      font-size: 14px;
+    }
+
+    @media (max-width: 480px) {
+      font-size: 13px;
+      margin-left: 35px;
+    }
   }
 
   input {
@@ -56,22 +165,56 @@
     font-size: 14px;
     padding: 5px;
     padding-left: 10px;
+
+    @media (max-width: 500px) {
+      height: 25px;
+      width: 150px;
+    }
+
+    @media (max-width: 480px) {
+      height: 20px;
+      width: 100px;
+    }
   }
 
   p {
     height: 30;
     color: rgb(151, 13, 13);
     padding-left: 100px;
+
+    @media (max-width: 500px) {
+      height: 20;
+      font-size: 13px;
+    }
+
+    @media (max-width: 480px) {
+      height: 10;
+      font-size: 13px;
+      padding-left: 120px;
+    }
   }
 }
 
 .email__block {
   margin-top: 35px;
 
+  @media (max-width: 480px) {
+    margin-top: 10px;
+    margin-left: 30px;
+  }
+
   label {
     display: block;
     margin: 0px 0px 10px 0px;
     font-size: 16px;
+
+    @media (max-width: 500px) {
+      font-size: 14px;
+    }
+
+    @media (max-width: 480px) {
+      font-size: 13px;
+    }
   }
 
   input {
@@ -87,12 +230,32 @@
     font-size: 14px;
     padding: 5px;
     padding-left: 10px;
+
+    @media (max-width: 500px) {
+      height: 25px;
+      width: 150px;
+      margin-left: 10px;
+    }
+
+    @media (max-width: 480px) {
+      height: 20px;
+      width: 100px;
+    }
+
+    @media (max-width: 440px) {
+      height: 20px;
+      width: 90px;
+    }
   }
 
   p {
     height: 30;
     color: rgb(151, 13, 13);
     padding-left: 100px;
+
+    @media (max-width: 500px) {
+      font-size: 13px;
+    }
   }
 }
 
@@ -103,27 +266,50 @@
     display: block;
     margin: 0px 0px 10px 0px;
     font-size: 16px;
+
+    @media (max-width: 500px) {
+      font-size: 15px;
+    }
+
+    @media (max-width: 480px) {
+      font-size: 14px;
+      margin-left: 25px;
+    }
+  }
+}
+
+textarea {
+  width: 99%;
+  background-color: $input;
+  min-height: 100px;
+  margin-right: 10px;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  line-height: normal;
+  font-family: sans-serif;
+  font-size: 14px;
+  resize: vertical;
+  padding: 10px;
+
+  @media (max-width: 500px) {
+    width: 79%;
+    min-height: 50px;
   }
 
-  textarea {
-    width: 99%;
-    background-color: $input;
-    min-height: 100px;
-    margin-right: 10px;
-    margin-top: 10px;
-    border: 1px solid #ccc;
-    border-radius: 2px;
-    line-height: normal;
-    font-family: sans-serif;
-    font-size: 14px;
-    resize: vertical;
-    padding: 10px;
+  @media (max-width: 440px) {
+    width: 75%;
+    min-height: 40px;
   }
-
   p {
     height: 30;
     color: rgb(151, 13, 13);
     padding-left: 100px;
+
+    @media (max-width: 480px) {
+      font-size: 11px;
+      padding-left: 120px;
+    }
   }
 }
 
@@ -139,6 +325,15 @@
   text-transform: uppercase;
   letter-spacing: 1px;
   transition: background-color 0.3s ease 0s;
+
+  @media (max-width: 480px) {
+    margin-top: 5px;
+    height: 35px;
+    width: 120px;
+    font-size: 13px;
+    font-weight: 400;
+    margin-left: 65px;
+  }
 
   &:hover {
     background-color: rgb(0, 0, 0);
