--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,6 +4,7 @@
   padding-top: 10px;
   color: $black;
   text-decoration: none;
+  font-family: 'Permanent + Marker';
 
   @media (max-width: 650px) {
     padding-top: 5px;
