--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -335,6 +335,10 @@ textarea {
     margin-left: 65px;
   }
 
+  @media (max-width: 370px) {
+    margin-left: 45px;
+  }
+
   &:hover {
     background-color: rgb(0, 0, 0);
     color: #fff;
