--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -135,6 +135,23 @@
       width: 170px;
       margin-left: 41px;
     }
+
+    @media (max-width: 350px) {
+      width: 160px;
+      margin-left: 41px;
+    }
+
+    @media (max-width: 340px) {
+      margin-left: 37px;
+    }
+
+    @media (max-width: 330px) {
+      margin-left: 33px;
+    }
+
+    @media (max-width: 325px) {
+      margin-left: 31px;
+    }
   }
 }
 
@@ -174,10 +191,20 @@
     height: 25px;
   }
 
+  @media (max-width: 340px) {
+    width: 20px;
+    height: 20px;
+  }
+
   img {
     width: 40px;
     height: 40px;
     pointer-events: none;
+
+    @media (max-width: 340px) {
+      width: 20px;
+      height: 20px;
+    }
   }
 }
 
@@ -185,9 +212,17 @@
   top: 50%;
   left: 10px;
   transform: translateY(-60%);
+
+  @media (max-width: 340px) {
+    left: 5px;
+  }
 }
 .next {
   top: 50%;
   right: 10px;
   transform: translateY(-60%);
+
+  @media (max-width: 340px) {
+    right: 5px;
+  }
 }
