--- a/src/scss/components/_hobby.scss
+++ b/src/scss/components/_hobby.scss
@@ -30,6 +30,11 @@
       width: 200px;
       height: 300px;
     }
+
+    @media (max-width: 350px) {
+      width: 180px;
+      height: 280px;
+    }
   }
 }
 
